# dmi-nwp-download

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
dmi_nwp_download/: __main__.py  args.py  config.py  config.yaml  download.py  filter.py
