[project]
name = "dmi-nwp-download"
version = "0.1.0"
description = "Download NWP grib data from DMI open data"
authors = [
    {name = "K. Hintz", email = "kah@dmi.dk"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
