[project]
name = "dmi-nwp-download"
version = "0.1.0"
description = "Download NWP grib data from DMI open data"
authors = [
    {name = "K. Hintz", email = "kah@dmi.dk"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
nwp-download = "dmi_nwp_download:__main__.main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "importlib_metadata<5",
    "pre-commit>=3.3.2",
]
